...
                                color = MaterialTheme.colorScheme.onSurface.copy(alpha = Alpha.secondary)
                            )
                        }

                        // "Continue" option (either next question or finish game)
                        DuoButton(
                            text = if (isSavingSession) "Saving..." else (if (isLast) "Finish Game" else "Continue"),
                            enabled = !isSavingSession,
                            onClick = { continueOrFinish(isLast) },
                            modifier = Modifier.weight(1f),
                            color = if (correct) CorrectGreen else MaterialTheme.colorScheme.primary
                        )
                    }
...
